--- a/recipes/detox-day.html
+++ b/recipes/detox-day.html
@@ -4,9 +4,31 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/style.css">
-        <title>Study Session Recipe</title>
+        <title>Detox Day Recipe</title>
     </head>
     <body>
-        <h1>Detox Day Recipe</h1>
+        <div class="top-container"><h1>Detox Day Recipe</h1>
+            <img src="/images/detox-day.png" width="400" alt="Detox Day" class="responsive"><br>
+            <h3 style="text-align: left;">Description</h3>
+        </div>
+        <div class="center-text">
+            <p>Digital Detox Day recipe is a step-by-step fomula designed to help individuals disconnect from the digital world and reconnect with themselves.It’s a mindful approach to reducing screen time, promoting mental clarity, and enhancing overall well-being. The recipe includes setting your devices aside, engaging in offline activities, and enjoying the benefits of being present in the moment. 
+                Perfect for anyone looking to take a break from the constant connectivity of modern life.</p><br><br>
+            <h4>Ingredients</h4>
+                <ul> 
+                    <li>One smartphone with Do Not Disturb mode</li>
+                    <li>Several hours of unplugged time</li>
+                    <li>A dash of willpower</li>
+                    <li>Optional: A physical book or magazine</li> 
+                </ul><br>
+                <h4>Instructions</h4> 
+                <ol> 
+                    <li>Activate Do Not Disturb mode on your smartphone.</li>
+                    <li>Commit to several hours without checking any digital devices.</li>
+                    <li>Engage in offline activities like reading, meditating, or walking.</li>
+                    <li>Enjoy the mental clarity and relaxation that comes from disconnecting.</li>
+                </ol>
+        </div>
+        
     </body>
 </html> 
