--- a/recipes/mindful-morning.html
+++ b/recipes/mindful-morning.html
@@ -7,7 +7,28 @@
         <title>Mindful Morning Recipe</title>
     </head>
     <body>
-        <h1>Mindful Morning Recipe</h1>
+        <div class="top-container"><h1>Mindful Morning Recipe</h1>
+            <img src="/images/mindfulness-morning.png" width="400" alt="mindfulness-morning" class="responsive"><br>
+            <h3 style="text-align: left;">Description</h3>
+        </div>
+        <div class="center-text">
+            <p>Mindful Morning is a serene blueprint for starting your day with intention and tranquility. It combines meditation, gratitude, and deep breathing to cultivate a state of mindfulness that sets a positive tone for the day ahead. 
+                This recipe encourages you to take time for self-reflection, appreciate the small joys in life, and embark on your daily activities with a calm and focused mind. It’s an ideal way to nurture your mental health and enhance your daily routine.</p><br><br>
+            <h4>Ingredients</h4>
+                <ul> 
+                    <li>10 minutes of meditation</li>
+                    <li>1 journal for gratitude listing</li>
+                    <li>A quiet space</li>
+                    <li>A few deep breaths</li> 
+                </ul><br>
+                <h4>Instructions</h4> 
+                <ol> 
+                    <li>Begin with a 10-minute meditation session to clear your mind.</li>
+                    <li>Write down three things you're grateful for in your journal.</li>
+                    <li>Enjoy the silence around you and take a few deep breaths.</li>
+                    <li>Start your day with a positive and mindful attitude.</li>
+                </ol>
+        </div>
         
     </body>
 </html>
