--- a/recipes/study-session.html
+++ b/recipes/study-session.html
@@ -4,10 +4,31 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/style.css">
-        <title>Study Session Recipe</title>
+        <title>Focused Study Session</title>
     </head>
     <body>
-        <h1>Study Session Recipe</h1>
-
+        <div class="top-container"><h1>Focused Study Session Recipe</h1>
+            <img src="/images/study-session.png" width="400" alt="focused study session recipe" class="responsive"><br>
+            <h3 style="text-align: left;">Description</h3>
+        </div>
+        <div class="center-text">
+            <p>The Focused Study Session recipe is a structured approach to achieving deep concentration and effective learning. It utilizes the Pomodoro technique to break study time into manageable intervals, promoting sustained attention and regular breaks to refresh the mind. This recipe is designed to help students and lifelong learners create a distraction-free environment, set clear goals, and engage in productive study habits. 
+                It’s an excellent strategy for anyone looking to maximize their study efforts and retain more information.</p><br><br>
+            <h4>Ingredients</h4>
+                <ul> 
+                    <li>1 set of study materials</li>
+                    <li>A timer for the Pomodoro technique</li>
+                    <li>A quiet study area</li>
+                    <li>A clear goal for the session</li> 
+                </ul><br>
+                <h4>Instructions</h4> 
+                <ol> 
+                    <li>Set your study materials out in your quiet study area.</li>
+                    <li>Use the Pomodoro technique (25 minutes of focused work followed by a 5-minute break).</li>
+                    <li>Keep distractions at bay and concentrate on your study goal.</li>
+                    <li>Reward yourself after completing your study session.</li>
+                </ol>
+        </div>
+        
     </body>
 </html>
