--- a/recipes/unplugged-sleep.html
+++ b/recipes/unplugged-sleep.html
@@ -7,7 +7,28 @@
         <title>Unplugged Sleep Recipe</title>
     </head>
     <body>
-        <h1>Unplugged Sleep Recipe</h1>
+        <div class="top-container"><h1>Unplugged Sleep Recipe</h1>
+            <img src="/images/unplugged-sleep.png" width="400" alt="unplugged sleep recipe" class="responsive"><br>
+            <h3 style="text-align: left;">Description</h3>
+        </div>
+        <div class="center-text">
+            <p>The Unplugged Sleep recipe is a soothing formula for achieving restorative slumber in our tech-saturated world. It emphasizes the importance of creating a tranquil sleep environment by turning off electronic devices well before bedtime. This recipe helps to minimize sleep disturbances and encourages a deeper state of rest by leveraging the calming effects of a dark, cool room and the subtle scent of lavender. 
+                It’s the perfect remedy for those seeking a peaceful night’s sleep, free from digital interruptions.</p><br><br>
+            <h4>Ingredients</h4>
+                <ul> 
+                    <li>1 comfortable bed</li>
+                    <li>A pinch of lavender oil or sleep spray</li>
+                    <li>A dark, cool room</li>
+                    <li>All electronic devices turned off</li> 
+                </ul><br>
+                <h4>Instructions</h4> 
+                <ol> 
+                    <li>Sprinkle your pillow with a bit of lavender oil or sleep spray.</li>
+                    <li>Ensure your room is dark and at a comfortable temperature.</li>
+                    <li>Turn off all electronic devices at least 30 minutes before bed.</li>
+                    <li>Drift off into a peaceful, uninterrupted night's sleep.</li>
+                </ol>
+        </div>
         
     </body>
-</html>
+</html> 
