--- a/recipes/index.html
+++ b/recipes/index.html
@@ -9,7 +9,7 @@
     <body>
     <h1>Odin Recipes for Life</h1>
         <a href="/recipes/mindful-morning.html">Mindful Morning</a><br>
-        <a href="/recipes/study-session.html">Study Session</a><br>
+        <a href="/recipes/study-session.html">Focused Study Session</a><br>
         <a href="/recipes/unplugged-sleep.html">Unplugged Sleep</a><br>
         <a href="/recipes/detox-day.html">Detox Day</a><br>
         
