--- a/recipes/mindful-morning.html
+++ b/recipes/mindful-morning.html
@@ -28,6 +28,9 @@
                     <li>Enjoy the silence around you and take a few deep breaths.</li>
                     <li>Start your day with a positive and mindful attitude.</li>
                 </ol>
+
+                <h4><a href="/recipes">All Recipes</a></h4>
+
         </div>
         
     </body>
