--- a/recipes/study-session.html
+++ b/recipes/study-session.html
@@ -28,6 +28,7 @@
                     <li>Keep distractions at bay and concentrate on your study goal.</li>
                     <li>Reward yourself after completing your study session.</li>
                 </ol>
+                <h4><a href="/recipes">All Recipes</a></h4>
         </div>
         
     </body>
