--- a/recipes/unplugged-sleep.html
+++ b/recipes/unplugged-sleep.html
@@ -28,6 +28,9 @@
                     <li>Turn off all electronic devices at least 30 minutes before bed.</li>
                     <li>Drift off into a peaceful, uninterrupted night's sleep.</li>
                 </ol>
+
+                <h4><a href="/recipes">All Recipes</a></h4>
+
         </div>
         
     </body>
