Updated index file
Index file wasn't pointing to correct directory. fix it.

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -8,10 +8,10 @@
 </head>
     <body>
     <h1>Odin Recipes for Life</h1>
-        <a href="/recipes/mindful-morning.html">Mindful Morning</a><br>
-        <a href="/recipes/study-session.html">Focused Study Session</a><br>
-        <a href="/recipes/unplugged-sleep.html">Unplugged Sleep</a><br>
-        <a href="/recipes/detox-day.html">Detox Day</a><br>
+        <a href="/mindful-morning.html">Mindful Morning</a><br>
+        <a href="/study-session.html">Focused Study Session</a><br>
+        <a href="/unplugged-sleep.html">Unplugged Sleep</a><br>
+        <a href="/detox-day.html">Detox Day</a><br>
         
     </body>
 </html>
