Troubleshooting Page on Github
Some links not working for somereason. Doublechecked forward slashes.

--- a/recipes/mindful-morning.html
+++ b/recipes/mindful-morning.html
@@ -29,7 +29,7 @@
                     <li>Start your day with a positive and mindful attitude.</li>
                 </ol>
 
-                <h4><a href="/recipes">All Recipes</a></h4>
+                <h4><a href="/">All Recipes</a></h4>
 
         </div>
         
