--- a/recipes/unplugged-sleep.html
+++ b/recipes/unplugged-sleep.html
@@ -29,7 +29,7 @@
                     <li>Drift off into a peaceful, uninterrupted night's sleep.</li>
                 </ol>
 
-                <h4><a href="/recipes">All Recipes</a></h4>
+                <h4><a href="/">All Recipes</a></h4>
 
         </div>
         
