--- a/recipes/detox-day.html
+++ b/recipes/detox-day.html
@@ -28,7 +28,7 @@
                     <li>Engage in offline activities like reading, meditating, or walking.</li>
                     <li>Enjoy the mental clarity and relaxation that comes from disconnecting.</li>
                 </ol>
-                <h4><a href="/recipes">All Recipes</a></h4>
+                <h4><a href="/">All Recipes</a></h4>
         </div>
         
     </body>
