Change to full path
Reletive paths not working changed to full path.

--- a/recipes/detox-day.html
+++ b/recipes/detox-day.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="top-container"><h1>Detox Day Recipe</h1>
-            <img src="/images/detox-day.png" width="400" alt="Detox Day" class="responsive"><br>
+            <img src="/odin-recipes/images/detox-day.png" width="400" alt="Detox Day" class="responsive"><br>
             <h3 style="text-align: left;">Description</h3>
         </div>
         <div class="center-text">
@@ -28,7 +28,7 @@
                     <li>Engage in offline activities like reading, meditating, or walking.</li>
                     <li>Enjoy the mental clarity and relaxation that comes from disconnecting.</li>
                 </ol>
-                <h4><a href="/">All Recipes</a></h4>
+                <h4><a href="/odin-recipes">All Recipes</a></h4>
         </div>
         
     </body>
