--- a/recipes/study-session.html
+++ b/recipes/study-session.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="top-container"><h1>Focused Study Session Recipe</h1>
-            <img src="/images/study-session.png" width="400" alt="focused study session recipe" class="responsive"><br>
+            <img src="/odin-recipes/images/study-session.png" width="400" alt="focused study session recipe" class="responsive"><br>
             <h3 style="text-align: left;">Description</h3>
         </div>
         <div class="center-text">
@@ -28,7 +28,7 @@
                     <li>Keep distractions at bay and concentrate on your study goal.</li>
                     <li>Reward yourself after completing your study session.</li>
                 </ol>
-                <h4><a href="/">All Recipes</a></h4>
+                <h4><a href="/odin-recipes">All Recipes</a></h4>
         </div>
         
     </body>
