--- a/recipes/unplugged-sleep.html
+++ b/recipes/unplugged-sleep.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="top-container"><h1>Unplugged Sleep Recipe</h1>
-            <img src="/images/unplugged-sleep.png" width="400" alt="unplugged sleep recipe" class="responsive"><br>
+            <img src="/odin-recipes/images/unplugged-sleep.png" width="400" alt="unplugged sleep recipe" class="responsive"><br>
             <h3 style="text-align: left;">Description</h3>
         </div>
         <div class="center-text">
@@ -29,7 +29,7 @@
                     <li>Drift off into a peaceful, uninterrupted night's sleep.</li>
                 </ol>
 
-                <h4><a href="/">All Recipes</a></h4>
+                <h4><a href="/odin-recipes">All Recipes</a></h4>
 
         </div>
         
