--- a/recipes/mindful-morning.html
+++ b/recipes/mindful-morning.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="top-container"><h1>Mindful Morning Recipe</h1>
-            <img src="/images/mindfulness-morning.png" width="400" alt="mindfulness-morning" class="responsive"><br>
+            <img src="/odin-recipes/images/mindfulness-morning.png" width="400" alt="mindfulness-morning" class="responsive"><br>
             <h3 style="text-align: left;">Description</h3>
         </div>
         <div class="center-text">
@@ -29,7 +29,7 @@
                     <li>Start your day with a positive and mindful attitude.</li>
                 </ol>
 
-                <h4><a href="/">All Recipes</a></h4>
+                <h4><a href="/odin-recipes">All Recipes</a></h4>
 
         </div>
         
