--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Odin Recipes for Life</title>
 </head>
     <body>
-    <h1>Odin Recipes for Life</h1>
-        <a href="recipes/mindful-morning.html">Mindful Morning</a><br>
-        <a href="recipes/study-session.html">Focused Study Session</a><br>
-        <a href="recipes/unplugged-sleep.html">Unplugged Sleep</a><br>
-        <a href="recipes/detox-day.html">Detox Day</a><br>
         
+    <h1>Odin Recipes for Life</h1>
+        <div class="menu">
+            <button><a href="recipes/mindful-morning.html">Mindful Morning</a></button>
+            <button><a href="recipes/study-session.html">Focused Study Session</a></button>
+            <button><a href="recipes/unplugged-sleep.html">Unplugged Sleep</a></button>
+            <button><a href="recipes/detox-day.html">Detox Day</a></button>
+        </div>
     </body>
 </html>
